--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-    background-image: url('/assets/image.png');
+    background-image: url('assets/image.png');
     background-repeat: no-repeat;
     background-size: cover;
     padding: 10%;
